# cpp_starter_project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.txt
cmake/: CompilerWarnings.cmake  Conan.cmake  DownloadIfNotExists.cmake  RunConan.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
demo/: use_mylib.cpp
demos/: CMakeLists.txt  use_mylib.cpp
dev_example/: CMakeLists.txt  hello_example.cpp
lib/mylib/: CMakeLists.txt  example.hpp
libs/mylib/: example.cpp  example.hpp
prog/myprog/: main.cpp
progs/myprog/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt
